--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -50,3 +50,10 @@
   flex-direction: row;
   justify-content: center;
 }
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
